src/test/deca/context/invalid/oracle/minus_op_with_wrong_types3.deca
{
    5.0 - "Hello";
}